<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="60dp"
    tools:context="com.stvya.BlackTiles.Main2Activity"
    android:background="@color/Black"
    android:orientation="vertical"
    android:id="@+id/linear2">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:textAlignment="center"
            android:textSize="85sp"
            android:textStyle="bold"
            android:text="@string/game_over"
            android:gravity="center_horizontal" />
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:textColor="@color/White"
    android:textStyle="bold"
    android:textSize="49sp"
    android:text="@string/your_score"
        android:id="@+id/tvs"
        android:gravity="center_horizontal" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:textStyle="bold"
        android:textSize="59sp"
        android:id="@+id/tvscore"
        android:gravity="center_horizontal" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center_horizontal">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="90dp"
            android:layout_height="95dp"
            android:background="@color/Black"
            android:textSize="30sp"
            android:textColor="@color/White"
            android:text="@string/new_game"
            android:id="@+id/btnnwgme"/>
        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="18dp"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@color/Black"
            android:textColor="@color/White"
            android:textSize="30sp"
            android:text="@string/quit"
            android:id="@+id/btnqt"
            android:layout_marginStart="20dp" />
        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="18dp"
            android:layout_width="105dp"
            android:layout_height="90dp"
            android:background="@color/Black"
            android:textColor="@color/White"
            android:textSize="30sp"
            android:text="@string/share"
            android:id="@+id/btnshare"
            android:layout_marginStart="20dp" />

    </LinearLayout>
</LinearLayout>